--- a/.github/workflows/phpcs.yml
+++ b/.github/workflows/phpcs.yml
@@ -24,4 +24,4 @@ jobs:
         run: composer install --prefer-dist --no-progress
 
       - name: Run PHPCS
-        run: composer lint -- --report-checkstyle | cs2pr
+        run: composer lint -- -q --report-checkstyle | cs2pr
