Add ABSPATH check to all PHP files for security
Added `if ( ! defined( 'ABSPATH' ) ) { exit; }` to the top of all PHP files to prevent direct access and improve security. Updated .gitignore to clean up formatting and ignore .claude. Updated README to reflect compatibility with WordPress 6.9. Added microsub.zip to the repository.

--- a/.gitignore
+++ b/.gitignore
@@ -1,10 +1,11 @@
 # Dependencies
-/vendor/
-/node_modules/
+/vendor
+/node_modules
 
 # IDE
-.idea/
-.vscode/
+.idea
+.vscode
+.claude
 *.sublime-project
 *.sublime-workspace
 
